# Motion_control_accurate

./: README.md
src/action_of_motion/: package.xml  setup.cfg  setup.py
src/action_of_motion/action_of_motion/: motion_action_node.py  move_to_pose_client.py
src/action_of_motion/config/: param.yaml
src/action_of_motion/launch/: motion_action.launch.py
src/action_of_motion/scripts/: plot_pid_debug.sh  send_move_goal.sh
src/action_of_motion_interfaces/: CMakeLists.txt  package.xml
src/action_of_motion_interfaces/action/: MoveToPose.action
